kubernetes/apps/external/pfsense/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pfsense
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 10443
