kubernetes/apps/external/pfsense/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfsense
  namespace: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: pfsense.png
    gethomepage.dev/name: pfsense
    gethomepage.dev/group: Media
    gethomepage.dev/widget.type: pfsense
    gethomepage.dev/widget.url: http://pfsense.external
    hajimari.io/icon: mdi:pfsense
    hajimari.io/enable: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "pfsense.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pfsense
                port:
                  number: 10443
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: pfsense
  namespace: external
subsets:
  - addresses:
      - ip: ${FIREWALL_IP}
    ports:
      - name: http
        port: 10443
        protocol: TCP
